# oss-info-maven

./: Cargo.toml  README.md
.github/workflows/: build.yml
android-template/: build.gradle  settings.gradle
android-template/app/: build.gradle
android-template/app/src/main/: AndroidManifest.xml
android-template/app/src/main/kotlin/jp/tinyport/tinyapplication/: MainActivity.kt
android-template/app2/: build.gradle
android-template/app2/src/main/: AndroidManifest.xml
android-template/lib/: build.gradle
android-template/liblib/: build.gradle
src/: function.rs  lib.rs  main.rs  model.rs  prelude.rs
src/function/: gradle.rs  maven.rs  mock_server.rs
src/function/gradle/: parse_dependencies_string.rs  parse_prettied_dependencies_string.rs
src/function/maven/: maven_metadata.rs  pom.rs
src/model/: spdx.rs
